[package]
name = "vault"
version = "0.2.1"
authors = ["Marco <sun.dsk1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-sdk-sim = "3.1.0"
test_token = { path = "../test_token" }

